<resources>
    <string name="app_name" translatable="false">VillagETS</string>
    <string name="login_title">Sign in</string>
    <string name="login_identifier_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Sign in</string>
    <string name="login_no_account">Don\'t have an account? Sign up</string>
    <string name="signup_title">Sign up</string>
    <string name="signup_email_hint">Email</string>

    <string name="signup_firstname_hint">Name</string>
    <string name="signup_lastname_hint">Last name</string>
    <string name="signup_confirm_password_hint">Confirm password</string>
    <string name="signup_button">Create account</string>
    <string name="signup_already_registered">Have an account? Sign in</string>
    <string name="recherche">Search</string>


    <string name="description_text_goes_here">Description here...</string>
    <string name="contact_seller">Contact seller</string>
    <string name="comments">Comments</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="type_a_message">Type a message...</string>
    <string name="settings">Settings</string>
    <string name="start_conversation">Start conversation</string>
    <string name="posts">posts</string>
    <string name="first_last_name">First and Last Name</string>
    <string name="user_id" translatable="false">User ID: ...</string>
    <string name="my_posts">My Posts</string>
    <string name="my_profile">My Profile</string>
    <string name="modifier_l_image">"Modifie image "</string>
    <string name="new_username">new username</string>
    <string name="change_password">Change password</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="apply_changes">Apply changes</string>
    <string name="id_de_l_utilisateur">User ID</string>
    <string name="chat">Chat</string>
    <string name="POST_CAPS">POSTS</string>
    <string name="users_CAPS">USERS</string>
    <string name="user">User</string>
    <string name="comment_text">Comment text</string>
    <string name="_4_22_2026" translatable="false">4/22/2026</string>
    <string name="reply">Reply</string>
    <string name="_3_replies">▼ 3 replies</string>
    <string name="delete">Delete</string>
    <string name="message_text">Message text...</string>
    <string name="username">Username</string>

    <string name="signup_username_hint">Username</string>

    <string name="min_price_hint">Min $</string>
    <string name="max_price_hint">Max $</string>
    <string name="apply_filters">Apply</string>
    <string name="sort_newest">Newest</string>
    <string name="sort_oldest">Oldest</string>
    <string name="sort_top">Top Liked</string>
    <string name="error_user_gone">User does not exist or has been deleted</string>

</resources>
