<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivCommentUserAvatar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/CircleImageAppearance"
            android:src="@drawable/profile_placeholder" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_gray_header"
                android:backgroundTint="@color/surface"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/tvCommentUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/delta_medium"
                    android:text="@string/user"
                    android:textColor="@color/text_primary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCommentContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/delta_light"
                    android:text="@string/comment_text"
                    android:textColor="@color/text_primary"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/ivCommentImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="250dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCommentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/delta_light"
                    android:text="@string/_4_22_2026"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvReplyAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/delta_medium"
                    android:text="@string/reply"
                    android:textColor="@color/text_primary"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvExpandReplies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/delta_medium"
                    android:text="@string/_3_replies"
                    android:textColor="@color/text_primary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvDeleteComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/delta_medium"
                    android:text="@string/delete"
                    android:textColor="@color/text_primary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/repliesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/color_3"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReplies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />
    </LinearLayout>

</LinearLayout>
